--- a/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
@@ -43,7 +43,7 @@
                 <a class="nav-link " routerLink="/locality/option/Audit/recomendation">Recomendations</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Management Response</a>
+                <a class="nav-link " routerLink="/locality/option/Audit/management">Management Response</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/form2">Action Plan</a>
