--- a/src/app/locality-component/locality-tab/locality-legal/locality-legal.component.html
+++ b/src/app/locality-component/locality-tab/locality-legal/locality-legal.component.html
@@ -4,14 +4,14 @@
         <div class="form-row">
             <div class="form-group col-md-6">
 
-                <label for="inputState">Acronym</label>
+                <label for="inputState" >Acronym</label>
                 <div class="asterisk">*</div>
-               <input type="text" class="form-control" id="lastName" value="Value">
+               <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName">Last updated by</label>
                 
-                <input type="text" class="form-control" id="lastName" value="Value">
+                <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
         </div>
 
@@ -21,17 +21,20 @@
              <div class="form-group col-md-6">
                 <label for="lastName">Name</label>
                 <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
+                <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
             <div class="form-group col-md-6">
                 <label for="email">Updated at</label>
-                    <input type="email" class="form-control" id="email" value="Value">
+                    <input type="email" class="form-control" id="email" value="enter here">
             </div>
         </div>
         <hr/>
+        <p>
+		<b>Legal Documents</b>
+	</p>
         <div class="form-row">
             <div class="form-group col-md-6">
-               <label for="inputState">MOU Name</label>
+               <label for="inputState">Name</label>
                 
                <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
