--- a/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.css
+++ b/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.css
@@ -20,6 +20,11 @@ i.fa {
     font-size: inherit;
     text-rendering: auto;
    }
+   
+   .form-control:disabled, .form-control[readonly] {
+    background-color: #ffffff;
+   
+}
 
 th{
     font-weight: bold;
