--- a/src/app/locality-component/locality-tab/locality-audit/audit-recomendations/audit-recomendations.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/audit-recomendations/audit-recomendations.component.html
@@ -4,7 +4,7 @@
 
                 <label for="inputState">Recomended by</label>
                
-                 <input type="text" class="form-control" id="lastName" value="Value">
+                 <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName">Estimated completion date</label>
