--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
@@ -16,12 +16,12 @@
 
 				<label for="inputState">Last Updated by</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value" >
+				<input type="text" class="form-control" id="lastName" value="enter here" >
 			</div>
 			<div class="form-group col-md-6">
 				<label for="lastName">Updated at</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 		</div>
 		<div class="form-row">
@@ -29,13 +29,13 @@
 
 				<label for="inputState">Locality Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 			<div class="form-group col-md-6">
 
 				<label for="inputState">Locality Code</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 
 		</div>
@@ -43,7 +43,7 @@
 
 			<div class="form-group col-md-6">
 				<label for="lastName">FIPS Code</label> <input type="text"
-					class="form-control" id="lastName" value="Value">
+					class="form-control" id="lastName" value="enter here">
 
 			</div>
 		</div>
@@ -62,12 +62,12 @@
 
 				<label for="inputState">First Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value" ngModel required name="myName">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="lastName">Last Name</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 		</div>
 
@@ -77,25 +77,25 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Email Id</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 			<div class="form-group col-md-6">
 
 				<label for="email">Phone No</label>
 				<div class="asterisk">*</div>
-				<input type="email" class="form-control" id="email" value="Value">
+				<input type="email" class="form-control" id="email" value="enter here">
 			</div>
 		</div>
 		<div class="form-row">
 			<div class="form-group col-md-6">
 				<label for="lastName">Website Address</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 			<div class="form-group col-md-6">
 				<label for="email">Veris Id</label>
 				<div class="asterisk">*</div>
-				<input type="email" class="form-control" id="email" value="Value">
+				<input type="email" class="form-control" id="email" value="enter here">
 			</div>
 
 		</div>
@@ -123,7 +123,7 @@
 			<div class="form-group col-md-6">
 				<label for="lastName">Automate COMET/Penality</label>
 				<div class="asterisk">*</div>
-				<input type="text" class="form-control" id="lastName" value="Value">
+				<input type="text" class="form-control" id="lastName" value="enter here">
 			</div>
 
 		</div>
