Updated Locality routing

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
     <hr />
     <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a routerLink="/locality" class="card-link"><fa [name]="'plus-circle'"></fa></a>
+    <a routerLink="/locality/map" class="card-link"><fa [name]="'plus-circle'"></fa></a>
     <a routerLink="/localityView" class="view-edit card-link"><fa [name]="'eye'"></fa> / <fa [name]="'edit'"></fa></a>
   </div>
 </div>
