--- a/src/app/locality-component/locality-tab/locality-solutionstablelink/locality-solutionstablelink.component.css
+++ b/src/app/locality-component/locality-tab/locality-solutionstablelink/locality-solutionstablelink.component.css
@@ -16,6 +16,11 @@ tbody tr:nth-child(even) {
   background-color:white;
 }
 
+.form-control:disabled, .form-control[readonly] {
+    background-color: #ffffff;
+   
+}
+
 
 .plus{
 	float:right;
