--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -5,10 +5,10 @@
                 <a class="nav-link" routerLink="/locality/option"> <i class="fa fa-info-circle"></i>Information </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link hover" routerLink="/locality/option/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
+                <a class="nav-link hover" routerLink="/locality/map/option/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link "  routerLink="/locality/option/legal"><i class="fa fa-info-circle"></i>Legal</a>
+                <a class="nav-link "  routerLink="/locality/map/option/legal"><i class="fa fa-info-circle"></i>Legal</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/Audit"><i class="fa fa-bell"></i>Audit/Compliance</a>
@@ -28,5 +28,5 @@
             </li>
         </ul>
     </div>
-    <router-outlet> </router-outlet>
+  <router-outlet></router-outlet>
 </div>
