--- a/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
+++ b/src/app/locality-component/locality-tab/locality-audit/locality-audit.component.html
@@ -6,12 +6,12 @@
 
                 <label for="inputState">Acronym</label>
                 <div class="asterisk">*</div>
-               <input type="text" class="form-control" id="lastName" value="Value">
+               <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName">Last updated by</label>
                 
-                <input type="text" class="form-control" id="lastName" value="Value">
+                <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
         </div>
 
@@ -21,11 +21,11 @@
              <div class="form-group col-md-6">
                 <label for="lastName">Name</label>
                 <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
+                <input type="text" class="form-control" id="lastName" value="enter here">
             </div>
             <div class="form-group col-md-6">
                 <label for="email">Updated at</label>
-                    <input type="email" class="form-control" id="email" value="Value">
+                    <input type="email" class="form-control" id="email" value="enter here">
             </div>
         </div>
         </form>
@@ -66,5 +66,5 @@
             </li>
         </ul>
     </div>
-    <router-outlet> </router-outlet>
+   
 </div>
