--- a/src/app/solutions/solutions.component.html
+++ b/src/app/solutions/solutions.component.html
@@ -6,7 +6,21 @@
         </div>
         <hr />-->
    <!--  <app-solutions-forms-component></app-solutions-forms-component> -->
-   <form (ngSubmit)="createSolution()" enctype="multipart/form-data" #form="ngForm">
+   <ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Success</h4>
+    <!-- <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button> -->
+  </div>
+  <div class="modal-body">
+    <p>Solution Added</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Close</button>
+  </div>
+</ng-template>
+   <form (ngSubmit)="createSolution()" enctype="multipart/form-data" #f="ngForm">
 			<div class="page-description"><h3>Solutions</h3>
     		<hr class="after-heading" />
     		</div>
@@ -15,15 +29,16 @@
             <div class="model-solution-row form-row">
             	<div class="model form-group col-md-6">
             <label class="label-form" for="modelSolution"><b>Model/Solution</b></label><div class="asterisk">*</div>
-              <input type="text" class="form-control" name="solutionName" id="modelSolution" (change)="solution.name = $event.target.value" required>
+              <input type="text" class="form-control" id="modelSolution" ngModel name="modelSolution" (change)="solution.name = $event.target.value" required>
             	</div>
             	<div class="version form-group col-md-6">
             		<label class="label-form" for="version"><b>Version</b></label><div class="asterisk">*</div>
-		              <input type="text" class="form-control" name="versionNumber" id="version" (change)="solution.versionNumber = $event.target.value" required>
+		              <input type="text" class="form-control" name="versionNumber" id="version" ngModel name="version" (change)="solution.versionNumber = $event.target.value" required>
             	</div>
             	<div class="form-group col-md-6">
             <label class="label-form" for="systemType"><b>System Type</b></label><div class="asterisk">*</div>
-              <select class="form-control" id="systemType" (change)="solution.systemTypeDTO.systemTypeId = $event.target.value"  required>
+              <select class="form-control" id="systemType" ngModel name="systemType" (change)="solution.systemTypeDTO.systemTypeId = $event.target.value"  required>
+              	 <option></option>
                <option *ngFor="let systemType of systemTypeDTO" value="{{ systemType.systemTypeId }}">
 		                {{ systemType.name }} 
 		                </option> 
@@ -31,14 +46,16 @@
             	</div>
             	<div class="form-group col-md-6">
             		<label class="label-form" for="equipmentType"><b>Equipment Type</b></label><div class="asterisk">*</div>
-		              <select class="form-control" id="equipmentType" (change)="solution.solutionType = $event.target.value" required>
+		              <select class="form-control" id="equipmentType" ngModel name="equipmentType" (change)="solution.solutionType = $event.target.value" required>
+		              	 <option></option>
 		                <option *ngFor="let equipmentType of solutionType" value="{{ equipmentType.solutionTypeId }}">
 		               	  {{ equipmentType.typeName }}
 		              </select>
             	</div>
             	<div class="form-group col-md-6">
             		<label class="label-form" for="vendor"><b>Vendor</b></label><div class="asterisk">*</div>
-		              <select class="form-control" id="vendor" (change)="solution.vendorId = $event.target.value" required>
+		              <select class="form-control" id="vendor" ngModel name="vendor" (change)="solution.vendorId = $event.target.value" required>
+		               <option></option>
 		           <option *ngFor="let vendor of vendorDTO" value="{{ vendor.vendorId }}">
 		                {{ vendor.name }}
 
@@ -81,7 +98,8 @@
            <h4>Installation and Hosting</h4>
             <div class="installation form-group col-md-6">
             <label for="hostingType"><b>Hosting Type</b></label><div class="asterisk">*</div>
-            <select class="form-control" id="hostingType" (change) = "solution.hostingTypeDTO.hostingTypeId = $event.target.value" required>
+            <select class="form-control" id="hostingType" ngModel name="hostingType" (change) = "solution.hostingTypeDTO.hostingTypeId = $event.target.value" required>
+            	 <option>Choose</option>
 		                <option *ngFor="let hostingType of hostingTypeDTO" value = "{{ hostingType.hostingTypeId }}">
 		                {{ hostingType.name }}
 		                </option>
@@ -89,7 +107,7 @@
             </div>
             <div class="installation form-group">
             <label class="hosting-notes" for="hostingNotes"><b>Hosting Notes</b></label><!-- <div class="asterisk-inline asterisk">*</div> -->
-            <textarea cols="156" rows="7" id="hostingNotes" required></textarea>
+            <textarea cols="156" rows="7" id="hostingNotes" ngModel name="hostingNotes" required></textarea>
             <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
             	<input type="file" #fileInput (change)="createCertDTO($event,'hosting')">
             </div>
@@ -101,7 +119,7 @@
             <div class="certification-test form-row">
             <div class="form-group col-md-6">
                 <label for="approvedDate"><b>DoEL Approved Date</b></label>
-                <my-date-picker name="myname"></my-date-picker> 
+                <my-date-picker name="myname" [(ngModel)]="approveDate"></my-date-picker> 
                 <!-- <input type="date" class="form-control" id="approvedDate"> -->
             </div>
             <div class="form-group col-md-6">
@@ -114,30 +132,32 @@
          <h4>Voting System Test Laboratory - VSTL</h4>
           <div class="certification-test form-group col-md-6">
             <label for="label-form labVendor"><b>Lab Vendor</b></label>
-            <select class="form-control" id="labVendor" (change) = "solution.labVendorsDTO.labVendorId = $event.target.value">
+<!--             <select class="form-control" id="labVendor" (change) = "solution.labVendorsDTO.labVendorId = $event.target.value"> -->
+ <select class="form-control" id="labVendor" (change) = "showLabVendor($event.target.value)">
+            <option>Choose</option>
 		                <option *ngFor="let lab of labVendorsDTO" value = "{{ lab.labVendorId }}">
 		                {{ lab.name }}
 		                </option>
 		              </select>
           </div> 
-        <div class="contact" *ngIf="labForm =='PROV&V' || 'SLI' || 'Wyle Laboratories/NTS'">
+        <div class="contact" *ngIf="labForm">
         <!--  <div class="contact"> -->
           	<div class="certification-test form-row">
             <div class="form-group col-md-6">
                 <label for="firstName"><b>First Name</b></label><div class="asterisk">*</div>
-                <input type="text" class="asterisk form-control" id="firstName" required>
+                <input type="text" class="form-control" id="firstName" ngModel name="firstName" [(ngModel)] ="labVendorsfirstName" [name] = "'firstName'" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName"><b>Last Name</b></label><div class="asterisk">*</div>
-                <input type="text" class="asterisk form-control" id="lastName" required>
+                <input type="text" class="form-control" id="lastName" ngModel name="lastName" [(ngModel)] ="labVendorslastName" [name] = "'lastName'" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="email"><b>Email Id</b></label><div class="asterisk">*</div>
-                <input type="email" class="asterisk form-control" id="email" required>
+                <input type="email" class="form-control" id="email" ngModel name="email" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="phone"><b>Phone Number</b></label><div class="asterisk">*</div>
-                <input type="text" class="asterisk form-control" id="phone" required>
+                <input type="text" class="form-control" id="phone" ngModel name="phone" [(ngModel)]="labVendorsphoneNumber" [name] = "'phoneNumber'" required>
             </div>
          </div>  
           <!-- <div class="certification-test form-row">
@@ -155,7 +175,7 @@
          <h4>Standard</h4>
          <div class="installation form-group">
             <label class="hosting-notes" for="standard"><b>Notes</b></label>
-            <textarea cols="156" rows="7" id="standard" required></textarea>
+            <textarea cols="156" rows="7" id="standard" ngModel name="standard" required></textarea>
             <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
          <input type="file" #fileInput (change)="createCertDTO($event,'standard')">
             </div>
@@ -164,7 +184,7 @@
         <h4>Patches</h4>
          <div class="installation form-group">
             <label class="hosting-notes" for="patches"><b>Patches</b></label>
-            <textarea cols="156" rows="7" id="patches" required></textarea>
+            <textarea cols="156" rows="7" id="patches" ngModel name="patches" required></textarea>
             <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
          		<input type="file" #fileInput (change)="createCertDTO($event,'patches')">
             </div>
@@ -180,8 +200,9 @@
          </div>
             <hr />
          <div class="buttons">
+         	<!-- <button type="submit" (click)="open(content)" [disabled]="!f.valid" class="submit btn btn-primary">Submit</button> -->
+         	<button type="submit" (click)="open(content)" class="submit btn btn-primary">Submit</button>
          	<button type="cancel" class="cancel btn btn-primary">Cancel</button>
         	<!-- <button type="submit" class="submit btn btn-primary" [disabled]="!form.valid">Submit</button> -->
-        	<button type="submit" class="submit btn btn-primary">Submit</button>
         </div>
 </form>
