--- a/src/app/solution-view-component/solution-table/solution-table.component.html
+++ b/src/app/solution-view-component/solution-table/solution-table.component.html
@@ -19,6 +19,7 @@
                          <td>{{solution.solutionTypeName }}</td>
                          <td>{{ solution.systemTypeDTO.name }}</td>
                          <td>{{ solution.certDt }}</td>
+                         <!-- <td>{{ solution.certDt | date : 'M/d/yyyy' }}</td> -->
                          <td>{{ solution.certRenewalDueDt }}</td>
                     </tr>
     </tbody>
