--- a/src/app/edit-solution/edit-solution.component.html
+++ b/src/app/edit-solution/edit-solution.component.html
@@ -32,7 +32,7 @@
     <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Close</button>
   </div>
 </ng-template>
-<form  (ngSubmit)="createSolution()" enctype="multipart/form-data">
+<form  (ngSubmit)="createSolution()" enctype="multipart/form-data" #editForm="ngForm">
 			<div class="page-description"><h3>Solutions</h3>
     		<hr class="after-heading" />
     		</div>
@@ -41,17 +41,17 @@
             	<div class="model-solution-row form-row">
             	<div class="model form-group col-md-6">
             <label class="label-form" for="modelSolution"><b>Model/Solution</b></label>
-              <input type="text" class="form-control" name="solutionName" [(ngModel)] = "solution.name">
+              <input type="text" class="form-control" id="modelSolution" ngModel name = "modelSolution" [(ngModel)] = "solution.name">
             	</div>
             	<div class="version form-group col-md-6">
             		<label class="label-form" for="version"><b>Version</b></label>
-		              <input type="text" class="form-control" id="version" name="versionNumber" [(ngModel)] = "solution.versionNumber">
+		              <input type="text" class="form-control" id="version" ngModel name = "version" [(ngModel)] = "solution.versionNumber">
 		              
             	</div>
             	<div class="form-group col-md-6">
             	<label class="label-form" for="systemType"><b>System Type</b></label><div class="asterisk">*</div>
-              	<input type="text" class="form-control" id="systemType" *ngIf="editSolution.disabled" [(ngModel)] = "solution.systemTypeDTO.name" [name]="'system_name'">
-              	<select class="form-control" id="systemType" name="systemType" *ngIf="!editSolution.disabled" 
+              	<input type="text" class="form-control" id="systemType" *ngIf="editSolution.disabled" ngModel name = "systemType" [(ngModel)] = "solution.systemTypeDTO.name" [name]="'system_name'">
+              	<select class="form-control" id="systemType" ngModel name = "systemType" *ngIf="!editSolution.disabled" 
               	[(ngModel)]="solution.systemTypeDTO.systemTypeId" (change)="solution.systemTypeDTO.systemTypeId = $event.target.value" required>
 		           
 		           <option *ngFor="let systemType of systemTypeDTO" value="{{ systemType.systemTypeId }}">
@@ -61,8 +61,8 @@
             	</div>
             	<div class="form-group col-md-6">
             		<label class="label-form" for="equipmentType"><b>Equipment Type</b></label><div class="asterisk">*</div>
-		              <input type="text" class="form-control" id="equipmentType" *ngIf="editSolution.disabled" [(ngModel)] = "solution.solutionTypeName" [name] = "'solution_type'"> 
-		              <select class="form-control" id="equipmentType" name="equipmentType" *ngIf="!editSolution.disabled"
+		              <input type="text" class="form-control" id="equipmentType" ngModel name = "equipmentType" *ngIf="editSolution.disabled" [(ngModel)] = "solution.solutionTypeName" [name] = "'solution_type'"> 
+		              <select class="form-control" id="equipmentType" ngModel name = "equipmentType" *ngIf="!editSolution.disabled"
 		               [(ngModel)] = "solution.solutionType" (change)="solution.solutionType = $event.target.value" required>
 		               <option *ngFor="let equipmentType of solutionType" value="{{ equipmentType.solutionTypeId }}">
 		               	  {{ equipmentType.typeName }}
@@ -74,8 +74,8 @@
             	</div>
             	<div class="form-group col-md-6">
             		<label class="label-form" for="vendor"><b>Vendor</b></label><div class="asterisk">*</div>
-		              <input type="text" class="form-control" id="vendor" *ngIf="editSolution.disabled" [(ngModel)] = "solution.vendor.name" [name] = "'vendor_details'">
-		              <select class="form-control" id="vendor" name="vendor" *ngIf="!editSolution.disabled" 
+		              <input type="text" class="form-control" id="vendor" ngModel name = "vendor" *ngIf="editSolution.disabled" [(ngModel)] = "solution.vendor.name" [name] = "'vendor_details'">
+		              <select class="form-control" id="vendor" ngModel name = "vendor" *ngIf="!editSolution.disabled" 
 		              [(ngModel)]="solution.vendorId" (change)="solution.vendorId = $event.target.value" required>
 		           <option *ngFor="let vendor of vendorDTO" value="{{ vendor.vendorId }}">
 		                {{ vendor.name }}
@@ -131,8 +131,8 @@
            	<h4>Installation and Hosting</h4>
             	 <div class="installation form-group col-md-6">
 	            <label for="hostingType"><b>Hosting Type</b></label>
-	            <input type="text" class="form-control" id="hostingType" *ngIf="editSolution.disabled" [(ngModel)] = "solution.hostingTypeDTO.name" [name] = "'hosting_name'">
-	             <select class="form-control" id="hostingType" name="hostingType" *ngIf="!editSolution.disabled"
+	            <input type="text" class="form-control" id="hostingType" ngModel name = "hostingType" *ngIf="editSolution.disabled" [(ngModel)] = "solution.hostingTypeDTO.name" [name] = "'hosting_name'">
+	             <select class="form-control" id="hostingType" ngModel name = "hostingType" *ngIf="!editSolution.disabled"
 	             	[(ngModel)] = "solution.hostingTypeDTO.hostingTypeId" (change) = "solution.hostingTypeDTO.hostingTypeId = $event.target.value" required>
 		           <option *ngFor="let hostingType of hostingTypeDTO" value = "{{ hostingType.hostingTypeId }}">
 		                {{ hostingType.name }}
@@ -142,7 +142,7 @@
             </div>
             <div class="installation form-group">
             <label class="hosting-notes" for="hostingNotes"><b>Hosting Notes</b></label>
-            <textarea *ngIf="!editSolution.disabled" cols="156" rows="7" id="hostingNotes" required></textarea>
+            <textarea *ngIf="!editSolution.disabled" cols="156" rows="7" id="hostingNotes"></textarea>
             <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
             <div class="display-file">
             	<ul
@@ -161,8 +161,10 @@
             	<h4>Certification Information</h4>
             <div class="certification-test form-row">
             <div class="form-group col-md-6">
-                <label for="approvedDate"><b>DoEL Approved Date</b></label>
-                <my-date-picker name="myname" readonly></my-date-picker> 
+                <label for="approvedDate"><b>DoEL Approved Date</b></label> 
+                <my-date-picker name="myname" [(ngModel)]="approveDate" [selDate]="selectDate"></my-date-picker>  
+                <!-- <ngb-datepicker #dp [(ngModel)]="certDate" (navigate)="date = $event.next" [name] = "'cert_date'"></ngb-datepicker> -->
+                
             </div>
             <div class="form-group col-md-6">
                 <label for="dueDate"><b>Renewal Due Date</b></label>
@@ -175,8 +177,8 @@
           	<h4>Voting System Test Laboratory - VSTL</h4>
           	<div class="certification-test form-group col-md-6">
             <label for="label-form labVendor"><b>Lab Vendor</b></label>
-            <input type="text" class="form-control" id="labVendor" *ngIf="editSolution.disabled" [(ngModel)] = "solution.labVendorsDTO.name" [name] = "'lab_name'">
-            <select class="form-control" id="labVendor" name="labVendor" *ngIf="!editSolution.disabled"
+            <input type="text" class="form-control" id="labVendor" ngModel name = "labVendor" *ngIf="editSolution.disabled" [(ngModel)] = "solution.labVendorsDTO.name" [name] = "'lab_name'">
+            <select class="form-control" id="labVendor" ngModel name = "labVendor" *ngIf="!editSolution.disabled"
              [(ngModel)]="solution.labVendorsDTO.labVendorId" (change) = "solution.labVendorsDTO.labVendorId = $event.target.value" required>
 		           <option *ngFor="let lab of labVendorsDTO" value = "{{ lab.labVendorId }}">
 		                {{ lab.name }}
@@ -187,19 +189,19 @@
           	<div class="certification-test form-row">
             <div class="form-group col-md-6">
                 <label for="firstName"><b>First Name</b></label>
-                <input type="text" class="form-control" id="firstName" [(ngModel)] = "solution.labVendorsDTO.firstName" [name] = "'firstName'">
+                <input type="text" class="form-control" id="firstName" ngModel name = "firstName" [(ngModel)] = "solution.labVendorsDTO.firstName" [name] = "'firstName'" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName"><b>Last Name</b></label>
-                <input type="text" class="form-control" id="lastName" [(ngModel)] = "solution.labVendorsDTO.lastName" [name] = "'lastName'">
+                <input type="text" class="form-control" id="lastName" ngModel name = "lastName" [(ngModel)] = "solution.labVendorsDTO.lastName" [name] = "'lastName'" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="email"><b>Email Id</b></label>
-                <input type="email" class="form-control" id="email" [(ngModel)] = "solution.labVendorsDTO.emailId" [name] = "'emailId'">
+                <input type="email" class="form-control" id="email" ngModel name = "emailId" [(ngModel)] = "solution.labVendorsDTO.emailId" [name] = "'emailId'" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="phone"><b>Phone Number</b></label>
-                <input type="text" class="form-control" id="phone" [(ngModel)] = "solution.labVendorsDTO.phoneNumber" [name] = "'phoneNumber'">
+                <input type="text" class="form-control" id="phone" ngModel name = "phoneNumber" [(ngModel)] = "solution.labVendorsDTO.phoneNumber" [name] = "'phoneNumber'" required>
             </div>
          </div>
           </div>
@@ -209,7 +211,7 @@
          	<h4>Standard</h4>
          <div class="installation form-group">
             <label class="hosting-notes" for="standard"><b>Notes</b></label>
-            <textarea *ngIf="!editSolution.disabled" cols="156" rows="7" id="standard" required></textarea>
+            <textarea *ngIf="!editSolution.disabled" cols="156" rows="7" id="standard"></textarea>
             <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
          <input type="file" #fileInput *ngIf="!editSolution.disabled" (change)="createCertDTO($event,'standard')">
          <div class="display-file">
@@ -226,7 +228,7 @@
          <h4>Patches</h4>
          <div class="installation form-group">
             <label class="hosting-notes" for="patches"><b>Patches</b></label>
-            <textarea *ngIf="!editSolution.disabled" cols="156" rows="7" id="patches" required></textarea>
+            <textarea *ngIf="!editSolution.disabled" cols="156" rows="7" id="patches"></textarea>
             <div class="attachments-div"><p class="attachments"><b>Attachments</b></p>
             	<div class="display-file">
             	<table>
@@ -245,6 +247,7 @@
 							</ul> -->
             </div>
          		<input type="file" #fileInput *ngIf="!editSolution.disabled" (change)="createCertDTO($event,'patches')">
+         		<!-- <input type="file" #fileInput *ngIf="!editForm.form.disabled" (change)="createCertDTO($event,'patches')"> -->
             </div>
           </div>
          </div>
@@ -261,7 +264,8 @@
 									<a (click)="showFile(certDocDTO.certDocId)" style="cursor:pointer;color:blue;">{{certDocDTO.fileName}}</a></li>
 							</ul>
             </div>
-         <input type="file" #fileInput *ngIf="!editSolution.disabled" (change)="createCertDTO($event,'solution')">
+         <input type="file" #fileInput *ngIf="!editSolution.disabled" (change)="createCertDTO($event,'solution')"> 
+         <!-- <input type="file" #fileInput *ngIf="!editForm.form.disabled" (change)="createCertDTO($event,'solution')"> -->
             </div>
           </div>
          </div>
@@ -271,6 +275,7 @@
          <input type="file" #fileInput *ngIf="!editSolution.disabled">
             </div>  -->
          <div class="buttons">
+         	<!-- <button type="submit" (click)="open(content)" [disabled]="!editForm.valid" *ngIf="!editForm.disabled" class="submit btn btn-primary">Submit</button> -->
          	<button type="submit" (click)="open(content)" class="cancel btn btn-primary" *ngIf="!editSolution.disabled">Submit</button>
          	<button type="cancel" class="cancel btn btn-primary" (click)="backClicked()">Cancel</button>
         </div>
