--- a/src/app/policy-view-component/policy-view-forms-component/policy-view-forms-component.component.html
+++ b/src/app/policy-view-component/policy-view-forms-component/policy-view-forms-component.component.html
@@ -19,20 +19,20 @@
 		<div class="model-solution-row form-row">
             	<div class="model form-group col-md-6">
             <label class="label-form" for="definitiveSourceInput">Definitive Source</label><div class="asterisk">*</div>
-              <input type="text" class="edit-disable form-control" id="definitiveSourceInput" readonly value="VITA">
+              <input type="text" class="edit-disable form-control" id="definitiveSourceInput" readonly value="{{ policyData.definitiveSource }}">
               <!-- <div class="hover-icon"><fa class="ban" [name]="'ban'"></fa></div>-->
             	</div>
             	<div class="version form-group col-md-6">
             		<label class="label-form" for="updatedBy">Updated By</label><div class="asterisk">*</div>
-		              <input type="text" class="edit-disable form-control" id="updatedBy" readonly value="Sunny Singh">
+		              <input type="text" class="edit-disable form-control" id="updatedBy" readonly value="{{ policyData.updatedBy }}">
             	</div>
             	<div class="form-group col-md-6">
             <label class="label-form" for="Type/Policy">Type/Policy</label><div class="asterisk">*</div>
-              <input type="text" class="edit-disable form-control" id="Type/Policy" readonly value="IT Information Security Standard (SEC501-09.1)">
+              <input type="text" class="edit-disable form-control" id="Type/Policy" readonly value="{{ policyData.description }}">
             	</div>
             	<div class="form-group col-md-6">
             		<label class="label-form" for="updtedAt">Updated At</label><div class="asterisk">*</div>
-		              <input type="text" class="edit-disable form-control" id="updatedAt" readonly value="14-05-2018">
+		              <input type="text" class="edit-disable form-control" id="updatedAt" readonly value="{{ policyData.updatedTs }}">
             	</div>
             </div>
 	</div>
