--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -124,7 +124,7 @@
 </div>
     <div class="card" style="width: 18rem;">
   <div class="card-body">
-    <div class="card-heading"><h5 class="card-title">Policy</h5>
+    <div class="card-heading"><h5 class="card-title">Policies</h5>
       </div>
     <hr />
     <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
