--- a/src/app/policy-view-component/policy-view-forms-component/policy-view-forms-component.component.html
+++ b/src/app/policy-view-component/policy-view-forms-component/policy-view-forms-component.component.html
@@ -32,8 +32,8 @@
             	</div>
  -->            	<div class="form-group col-md-6">
             		<label class="label-form" for="updtedAt">Updated At</label><div class="asterisk">*</div>
-		              <input type="text" class="edit-disable form-control" id="updatedAt" readonly [(ngModel)] = "policyDisplay.updatedTs" [name] = "'updated_ts'">
-		              <!-- <input type="text" class="edit-disable form-control" id="updatedAt" readonly [(ngModel)] = "policyDisplay.updatedTs" [selDate] = "selectDate"> -->
+		              <!-- <input type="text" class="edit-disable form-control" id="updatedAt" readonly [(ngModel)] = "policyDisplay.updatedTs" [name] = "'updated_ts'"> -->
+		              <input type="text" class="edit-disable form-control" id="updatedAt" readonly value = "{{date}}">
             	</div> 
             </div>
 	</div>
